refactored api server code, added p5js integration

--- a/web_server/client/landing.html
+++ b/web_server/client/landing.html
@@ -3,8 +3,9 @@
     <h1>_turtlebot.init();</h1>
     <h3>>> hello world.</h3>
   </div>
+  <div id="sketch1" class="container"></div>
   <div id="pointer">
+    <img class="img-responsive" src="/images/x_coral.png">
   </div>
-  <div class="container" style="height: 50vh; background-color: yellow;" id="canvas">
-  </div>
+  <img class="img-responsive container" src="/images/ghc5.png" id="canvas">
 </template>
