added sei layout and p5js

--- a/web_server/client/landing.html
+++ b/web_server/client/landing.html
@@ -4,8 +4,8 @@
     <h3>>> hello world.</h3>
   </div>
   <div id="sketch1" class="container"></div>
-  <div id="pointer">
+  <!--<div id="pointer">
     <img class="img-responsive" src="/images/x_coral.png">
   </div>
-  <img class="img-responsive container" src="/images/ghc5.png" id="canvas">
+  <img class="img-responsive container" src="/images/sei_layout.png" id="canvas"> -->
 </template>
