--- a/web_server/client/main.html
+++ b/web_server/client/main.html
@@ -7,5 +7,27 @@
 </body>
 
 <template name="main">
+  <div class="ui hidden divider"></div>
+	<div class="ui container">
+		<div class="ui pointing stackable menu">
+			<a class="active item">
+				Home
+			</a>
+			<a class="item">
+				About
+			</a>
+			<a class="item">
+				Log In
+			</a>
+			<div class="right menu">
+				<div class="item">
+					<div class="ui transparent icon input">
+						<input type="text" placeholder="Search...">
+						<i class="search link icon"></i>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
   {{>yield}}
 </template>
