--- a/web_server/client/landing.html
+++ b/web_server/client/landing.html
@@ -11,8 +11,8 @@
 						<div class="row">
 							<div class="sixteen wide column">
 								<div class="ui action input">
-									<input type="text" placeholder="Left" size=5 id="calibrateLeft">
-									<button class="ui button">Calibrate</button>
+									<input type="text" placeholder="Left" size=5 id="calibrateLeft" readonly>
+									<button class="ui button" id="calibrateLeftButton">Calibrate</button>
 								</div>
 							</div>
 						</div>
@@ -56,6 +56,7 @@
         <div class="four wide column">
           <h3>Movements:</h3>
           <h4>Selected coordinates:</h4>
+          <p>({{selected.x}},{{selected.y}})</p>
           <div class="ui fluid button">Go!</div>
         </div>
       </div>
