added bounday calibration boxes

--- a/web_server/client/landing.html
+++ b/web_server/client/landing.html
@@ -10,7 +10,8 @@
 					<div class="ui grid">
 						<div class="row">
 							<div class="sixteen wide column">
-								<div class="ui action input">
+								<div class="ui labeled action input">
+                  <div class="ui basic label">Left:</div>
 									<input type="text" placeholder="Left" size=5 id="calibrateLeft" readonly>
 									<button class="ui button" id="calibrateLeftButton">Calibrate</button>
 								</div>
@@ -18,25 +19,28 @@
 						</div>
 						<div class="row">
 							<div class="sixteen wide column">
+                <p>Right:</p>
 								<div class="ui action input">
-									<input type="text" placeholder="Right" size=5>
-									<button class="ui button">Calibrate</button>
+									<input type="text" placeholder="Right" size=5 id="calibrateRight" readonly>
+									<button class="ui button" id="calibrateRightButton">Calibrate</button>
 								</div>
 							</div>
 						</div>
 						<div class="row">
 							<div class="sixteen wide column">
+                <p>Top:</p>
 								<div class="ui action input">
-									<input type="text" placeholder="Top" size=5>
-									<button class="ui button">Calibrate</button>
+									<input type="text" placeholder="Top" size=5 id="calibrateTop" readonly>
+									<button class="ui button" id="calibrateTopButton">Calibrate</button>
 								</div>
 							</div>
 						</div>
 						<div class="row">
 							<div class="sixteen wide column">
+                <p>Bottom:</p>
 								<div class="ui action input">
-									<input type="text" placeholder="Bottom" size=5>
-									<button class="ui button">Calibrate</button>
+									<input type="text" placeholder="Bottom" size=5 id="calibrateBottom" readonly>
+									<button class="ui button" id="calibrateBottomButton">Calibrate</button>
 								</div>
 							</div>
 						</div>
