--- a/web_server/client/landing.html
+++ b/web_server/client/landing.html
@@ -1,19 +1,21 @@
 <template name="landing">
   <div class="ui container">
     <div class="ui hidden divider"></div>
-    <h1>_turtlebot.init();</h1>
-    <h3>>> hello world.</h3>
+    <!--<h1>_turtlebot.init();</h1>
+    <h3>>> hello world.</h3> -->
     <div class="ui fluid stackable grid">
       <div class="row">
         <div class="four wide column">
           <h3>Grid alignment settings:</h3>
+          <div class="ui fluid {{blueCalibrateAll}} button" id="calibrateAll">Calibrate All Edges</div>
+          <div class="ui hidden divider"></div>
 					<div class="ui grid">
 						<div class="row">
 							<div class="sixteen wide column">
 								<div class="ui labeled action fluid input">
                   <div class="ui basic label">Left:</div>
 									<input type="text" placeholder="Left" size=5 id="calibrateLeft" readonly>
-									<button class="ui button" id="calibrateLeftButton">Calibrate</button>
+                  <button class="ui {{blueLeft}} button" id="calibrateLeftButton">Calibrate</button>
 								</div>
 							</div>
 						</div>
@@ -22,7 +24,7 @@
 								<div class="ui labeled action fluid input">
                   <div class="ui basic label">Right:</div>
 									<input type="text" placeholder="Right" size=5 id="calibrateRight" readonly>
-									<button class="ui button" id="calibrateRightButton">Calibrate</button>
+                  <button class="ui {{blueRight}} button" id="calibrateRightButton">Calibrate</button>
 								</div>
 							</div>
 						</div>
@@ -31,7 +33,7 @@
 								<div class="ui labeled action fluid input">
                   <div class="ui basic label">Top:</div>
 									<input type="text" placeholder="Top" size=5 id="calibrateTop" readonly>
-									<button class="ui button" id="calibrateTopButton">Calibrate</button>
+                  <button class="ui {{blueTop}} button" id="calibrateTopButton">Calibrate</button>
 								</div>
 							</div>
 						</div>
@@ -40,33 +42,46 @@
 								<div class="ui labeled action fluid input">
                   <div class="ui basic label">Bottom:</div>
 									<input type="text" placeholder="Bottom" size=5 id="calibrateBottom" readonly>
-									<button class="ui button" id="calibrateBottomButton">Calibrate</button>
+                  <button class="ui {{blueBottom}} button" id="calibrateBottomButton">Calibrate</button>
 								</div>
 							</div>
 						</div>
 					</div>
-        </div>
-        <div class="eight wide column">
-					<h3>Turtle Bot Status:</h3>
-					<p>Position (x):</p>
-					<p>Position (y):</p>
-					<p>Heading (th):</p>
-					<p>Message:</p>
-          <div class="ui segment">
-            status!
+          <div class="row">
+            <div class="ui hidden divider"></div>
+            <h3>Movements:</h3>
+            <h4>Selected coordinates:</h4>
+            <p>({{selected.x}},{{selected.y}})</p>
+            <div class="ui fluid {{blueGo}} button">Go!</div>
           </div>
-
+          <div class="row">
+            <div class="ui hidden divider"></div>
+            <h3>Turtle Bot Status:</h3>
+            <div class="ui grid">
+              <div class="row">
+                <div class="eight wide column">
+                  <p>Position (x):</p>
+                  <p>Position (y):</p>
+                </div>
+                <div class="eight wide column">
+                  <p>Heading (th):</p>
+                  <p>Message:</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="sixteen wide column">
+                  <div class="ui segment">
+                    status!
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="four wide column">
-          <h3>Movements:</h3>
-          <h4>Selected coordinates:</h4>
-          <p>({{selected.x}},{{selected.y}})</p>
-          <div class="ui fluid button">Go!</div>
+        <div class="twelve wide column">
+          <div id="sketch1"></div>
         </div>
       </div>
     </div>
   </div>
-	<div class="ui container">
-  	<div id="sketch1" class="container"></div>
-	</div>
 </template>
