--- a/web_server/client/landing.html
+++ b/web_server/client/landing.html
@@ -14,7 +14,7 @@
 							<div class="sixteen wide column">
 								<div class="ui labeled action fluid input">
                   <div class="ui basic label">Left:</div>
-									<input type="text" placeholder="Left" size=5 id="calibrateLeft" readonly>
+                  <input type="text" placeholder="Left" size=5 id="calibrateLeft" readonly>
                   <button class="ui {{blueLeft}} button" id="calibrateLeftButton">Calibrate</button>
 								</div>
 							</div>
@@ -52,7 +52,7 @@
             <h3>Movements:</h3>
             <h4>Selected coordinates:</h4>
             <p>({{selected.x}},{{selected.y}})</p>
-            <div class="ui fluid {{blueGo}} button">Go!</div>
+            <div class="ui fluid {{blueGo}} button" id="sendRobot">Go!</div>
           </div>
           <div class="row">
             <div class="ui hidden divider"></div>
