added modded server

--- a/web_server/client/landing.html
+++ b/web_server/client/landing.html
@@ -105,11 +105,11 @@
 							<div class="ui grid">
 								<div class="row">
 									<div class="eight wide column">
-										<p>Position (x):</p>
-										<p>Position (y):</p>
+										<p>Position (x): {{rosTurtlePos.x}}</p>
+										<p>Position (y): {{rosTurtlePos.y}}</p>
 									</div>
 									<div class="eight wide column">
-										<p>Heading (th):</p>
+										<p>Heading (th): {{rosTurtlePos.th}}</p>
 										<p>Message:</p>
 									</div>
 								</div>
