rearranged a bunch of files, implemented world to canvas

--- a/web_server/client/landing.html
+++ b/web_server/client/landing.html
@@ -80,7 +80,7 @@
 							</div>
 						</div>
 
-						<div class="title">
+						<div class="title" id="initRobotPos">
 							<i class="dropdown icon"></i>
 							Set robot coordinates
 						</div>
